fix spacing on mobile responsive

--- a/scss/base/_settings.scss
+++ b/scss/base/_settings.scss
@@ -14,6 +14,7 @@ $grey-blue: #EEF5FF;
 
 
 // Media queries
+$breakpoint-phone: 414px;
 $breakpoint-tablet: 768px;
 $breakpoint-l-tablet: 1024px;
 $breakpoint-laptop: 1200px;
