--- a/scss/components/_card.scss
+++ b/scss/components/_card.scss
@@ -56,6 +56,10 @@
     &__wrapper {
       display: flex;
 
+      @media (max-width: $breakpoint-phone){
+        margin-bottom: 1.5rem;
+      }
+
       &__first-letter {
         font-size: 15rem;
         font-family: $font-circular-bold;
@@ -102,8 +106,9 @@
 
     &__definition-wrapper {
       position: relative;
-      top: -15px;
+      top: 3px;
       text-align: center;
+      margin-bottom: 2rem;
 
       @media (min-width: $breakpoint-tablet){
         padding: 0 50px;
